# GameEngine2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  game.sln
cmake/: FindASSIMP.cmake
include/glad/: glad.h
lib/assimp-5.0.1/: AssimpPCH.h  assimp.lib  assimp.pc  assimpTargets-debug.cmake  assimpTargets-release.cmake  assimpd.lib  cmake_uninstall.cmake  revision.h
lib/glad/src/: glad.c
src/: main.cpp
src/editor/: editor.cpp
src/engine/: animation.cpp  animation.h  animator.h  animdata.h  baseObject.cpp  baseObject.h  bone.h  camera.h  context.cpp  context.h  display.cpp  display.h  engine.cpp  engine.h  heightmap.cpp  heightmap2.cpp  logger.cpp  logger.h  mesh.h  model.cpp  model.h  npc.cpp  npc.h  object.cpp  player.cpp  player.h  renderObject.cpp  renderObject.h  renderer.cpp  renderer.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  (+4 more)
src/engine/editor/: editor.cpp  editor.h
src/engine/editor/panels/: gui_panel_camera.cpp  gui_panel_world.cpp  gui_panel_world.h
src/engine/modules/: module.cpp
src/engine/modules/gui/: gui.cpp  gui.h
src/engine/modules/gui/panels/: gui_panel.cpp
src/game/: game.cpp  game.h  town.cpp  town.h
src/game/models/House1/: untitled.blend1
src/game/models/boulder/: newboulder.mtl
src/game/models/castle/: darkcastle.mtl
src/game/models/castle/tower/: medieval_tower_2.blend  medieval_tower_2.blend1  medieval_tower_2.mtl
src/game/models/cube/: cube.mtl
src/game/models/house/: house1.blend  house1.blend1  house1.mtl  house2.mtl  hsdf.mtl  lowpolybush1.mtl  polyhouse1.1.mtl  untitled.blend
src/game/models/rock1/: Rock1.mtl  polyrock1.mtl
src/game/models/sphere/: sphere.mtl
src/game/models/stone/: stone.mtl
src/game/models/stone/1/: Sandstone2.mtl  sandstone.rock1.mtl
src/game/models/test/: test.blend
src/game/models/tree/: cube.mtl  tree1.mtl
src/game/models/tree-low-poly/: lowpolytree.mtl  pinetree2.mtl  pinetree2withrocks.mtl  ploytree5.mtl  polytree1.mtl  polytree3.mtl  polytree4.mtl  tree.mtl
src/game/models/trees/cartoon/: CartoonTree.fbx  CartoonTree.mtl  CartoonTree.ply
src/game/models/trees/low_poly_tree/: Lowpoly_tree_sample.mtl
src/game/scenes/: world.cpp  world.h
src/helpers/: shader-loader.cpp  shader-loader.h  shader.cpp  texture.cpp
src/lights/: spotlight.cpp
src/shaders/: heightmap.fs  heightmap.vs  light.fs  light.vs  shadow.fs  shadow.vs  shadow_depth.vs  skybox.vs  triangle.fs
src/shape/: cube.cpp  cube.h  plane.cpp  plane.h  triangle.cpp
src/shape/ui/: gui.cpp
